Envio de emails

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "862cdb5b",
    "metadata": {},
    "outputs": [
@@ -21,23 +21,27 @@
     "import pandas as pd\n",
     "import athena_utils as au\n",
     "import locale\n",
+    "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
+    "\n",
     "locale.setlocale(locale.LC_TIME, 'Spanish_Spain.1252')  # Windows\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "290b6419",
    "metadata": {},
    "outputs": [],
    "source": [
     "## PARAMETROS -------------------------------\n",
+    "\n",
     "proyecto = 72\n",
     "convenio = \"54-54-00-00\"\n",
     "hoy = pd.Timestamp.now().normalize()\n",
     "fecha_inicio = '2025-01-01'\n",
     "fecha_fin = '2025-12-30'\n",
+    "\n",
     "## -----------------------------------------"
    ]
   },
@@ -92,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "8e90f4a8",
    "metadata": {},
    "outputs": [],
@@ -132,12 +136,13 @@
     "        (CASE WHEN rc.name IS NULL THEN 'N/A' ELSE rc.name END) AS Motivo,\n",
     "        rs.start_date AS \"Fecha\",\n",
     "        rs.state AS state,\n",
-    "        -- Profesor IED\n",
+    "        \n",
     "        CONCAT(rraux.name, ' ', rraux.last_name) AS profesor_ied_nombre,\n",
     "        CASE \n",
     "            WHEN aa_ied.status IN (1, 5) THEN true\n",
     "            ELSE false\n",
-    "        END AS profesor_ied_asistio\n",
+    "        END AS profesor_ied_asistio,\n",
+    "        \"email@responsable\" AS email_responsable\n",
     "\n",
     "    FROM\n",
     "        datalake.room_roomsessions rs\n",
@@ -177,13 +182,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "ec4635a5",
+   "execution_count": null,
+   "id": "9b2956fb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_cancelaciones = au.run_athena_query(query_cancelaciones)\n",
-    "df_estudiantes = au.run_athena_query(query_alumnos)"
+    "def ejecutar_queries_paralelo(queries_dict, max_workers=5):\n",
+    "    \"\"\"\n",
+    "    Ejecuta múltiples queries de Athena en paralelo.\n",
+    "    \n",
+    "    Args:\n",
+    "        queries_dict (dict): Diccionario donde la clave es el nombre identificador \n",
+    "                            y el valor es la query SQL\n",
+    "                            Ejemplo: {'cancelaciones': query1, 'asistencias': query2}\n",
+    "        max_workers (int): Número máximo de threads paralelos (default: 5)\n",
+    "    \n",
+    "    Returns:\n",
+    "        dict: Diccionario con los DataFrames resultantes\n",
+    "              Ejemplo: {'cancelaciones': df1, 'asistencias': df2}\n",
+    "    \"\"\"\n",
+    "    results = {}\n",
+    "    errors = {}\n",
+    "    \n",
+    "    with ThreadPoolExecutor(max_workers=max_workers) as executor:\n",
+    "        # Enviar todas las queries en paralelo\n",
+    "        futures = {\n",
+    "            executor.submit(athena.run_athena_query_auto, query, name): name \n",
+    "            for name, query in queries_dict.items()\n",
+    "        }\n",
+    "        \n",
+    "        # Recoger resultados según vayan terminando\n",
+    "        for future in as_completed(futures):\n",
+    "            query_name = futures[future]\n",
+    "            try:\n",
+    "                df = future.result()\n",
+    "                results[query_name] = df\n",
+    "                print(f\"✅ {query_name}: {len(df)} filas obtenidas\")\n",
+    "            except Exception as e:\n",
+    "                errors[query_name] = str(e)\n",
+    "                print(f\"❌ {query_name}: Error - {e}\")\n",
+    "    \n",
+    "    # Reportar resumen\n",
+    "    print(f\"\\n📊 Resumen: {len(results)}/{len(queries_dict)} queries completadas exitosamente\")\n",
+    "    \n",
+    "    if errors:\n",
+    "        print(f\"⚠️  Queries con error: {list(errors.keys())}\")\n",
+    "    \n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2e383c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Preparar queries\n",
+    "queries = {\n",
+    "    'cancelaciones': query_cancelaciones,\n",
+    "    'estudiantes': query_alumnos\n",
+    "}\n",
+    "\n",
+    "# Ejecutar en paralelo\n",
+    "print(\"🚀 Iniciando ejecución de queries en paralelo...\\n\")\n",
+    "dataframes = ejecutar_queries_paralelo(queries)\n",
+    "\n",
+    "df_cancelaciones = dataframes.get('cancelaciones')\n",
+    "df_estudiantes = dataframes.get('estudiantes')"
    ]
   },
   {
@@ -221,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "5848e838",
    "metadata": {},
    "outputs": [
@@ -756,8 +822,7 @@
     "\n",
     "# Convertir a DataFrame para visualización\n",
     "df_metricas = pd.DataFrame(metricas_por_institucion).T\n",
-    "df_metricas.index.name = 'institucion'\n",
-    "df_metricas"
+    "df_metricas.index.name = 'institucion'"
    ]
   },
   {
@@ -832,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "0vo7cwn1uyr",
    "metadata": {},
    "outputs": [
@@ -934,7 +999,7 @@
     "        'porcentaje_asistencia': f\"{metricas['porcentaje_asistencia']*100:.1f}%\",\n",
     "        'cantidad_estudiantes': metricas['estudiantes'],\n",
     "        'cantidad_salones': metricas['cantidad_salones'],\n",
-    "        'dia_de_hoy': dia_de_hoy,\n",
+    "        'dia_mes_ano': dia_de_hoy,\n",
     "        'mes_ano': mes_ano,\n",
     "        'convenio': convenio,\n",
     "        'grados': metricas['grados']\n",
@@ -947,6 +1012,99 @@
     "    print(f\"Generado: {nombre_archivo}\")\n",
     "\n",
     "print(f\"\\nSe generaron {len(metricas_por_institucion)} documentos en '{output_folder}'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "lu2mwasl15d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## ENVIO DE INFORMES POR EMAIL ##\n",
+    "import smtplib\n",
+    "import os\n",
+    "from email.mime.multipart import MIMEMultipart\n",
+    "from email.mime.base import MIMEBase\n",
+    "from email.mime.text import MIMEText\n",
+    "from email import encoders\n",
+    "\n",
+    "# Credenciales desde variables de entorno\n",
+    "GMAIL_USER = os.environ['GMAIL_USER']\n",
+    "GMAIL_APP_PASSWORD = os.environ['GMAIL_APP_PASSWORD']\n",
+    "\n",
+    "# Construir mapeo institucion -> email_responsable desde df_cancelaciones\n",
+    "email_por_institucion = (\n",
+    "    df_cancelaciones\n",
+    "    .dropna(subset=['institucion', 'email_responsable'])\n",
+    "    .drop_duplicates(subset=['institucion'])\n",
+    "    .set_index('institucion')['email_responsable']\n",
+    "    .to_dict()\n",
+    ")\n",
+    "\n",
+    "def enviar_email(destinatario, asunto, cuerpo, archivo_adjunto):\n",
+    "    \"\"\"Envia un email con un archivo adjunto via Gmail SMTP.\"\"\"\n",
+    "    msg = MIMEMultipart()\n",
+    "    msg['From'] = GMAIL_USER\n",
+    "    msg['To'] = destinatario\n",
+    "    msg['Subject'] = asunto\n",
+    "\n",
+    "    msg.attach(MIMEText(cuerpo, 'plain'))\n",
+    "\n",
+    "    with open(archivo_adjunto, 'rb') as f:\n",
+    "        adjunto = MIMEBase('application', 'octet-stream')\n",
+    "        adjunto.set_payload(f.read())\n",
+    "        encoders.encode_base64(adjunto)\n",
+    "        adjunto.add_header(\n",
+    "            'Content-Disposition',\n",
+    "            f'attachment; filename=\"{os.path.basename(archivo_adjunto)}\"'\n",
+    "        )\n",
+    "        msg.attach(adjunto)\n",
+    "\n",
+    "    with smtplib.SMTP('smtp.gmail.com', 587) as server:\n",
+    "        server.starttls()\n",
+    "        server.login(GMAIL_USER, GMAIL_APP_PASSWORD)\n",
+    "        server.send_message(msg)\n",
+    "\n",
+    "# Enviar un informe a cada institucion\n",
+    "enviados = 0\n",
+    "errores = []\n",
+    "\n",
+    "for institucion in metricas_por_institucion:\n",
+    "    email = email_por_institucion.get(institucion)\n",
+    "    if not email:\n",
+    "        errores.append(f\"{institucion}: sin email_responsable\")\n",
+    "        continue\n",
+    "\n",
+    "    nombre_archivo = f\"{institucion.replace('/', '-').replace('\\\\', '-')}.docx\"\n",
+    "    ruta_archivo = os.path.join(output_folder, nombre_archivo)\n",
+    "\n",
+    "    if not os.path.exists(ruta_archivo):\n",
+    "        errores.append(f\"{institucion}: archivo no encontrado ({nombre_archivo})\")\n",
+    "        continue\n",
+    "\n",
+    "    asunto = f\"Informe {institucion} - {mes_ano}\"\n",
+    "    cuerpo = (\n",
+    "        f\"Cordial saludo,\\n\\n\"\n",
+    "        f\"Adjunto encontrara el informe de asistencia y sesiones de {institucion} \"\n",
+    "        f\"correspondiente a {mes_ano}.\\n\\n\"\n",
+    "        f\"Cualquier inquietud no dude en comunicarse.\\n\\n\"\n",
+    "        f\"Atentamente.\"\n",
+    "    )\n",
+    "\n",
+    "    try:\n",
+    "        enviar_email(email, asunto, cuerpo, ruta_archivo)\n",
+    "        enviados += 1\n",
+    "        print(f\"Enviado: {institucion} -> {email}\")\n",
+    "    except Exception as e:\n",
+    "        errores.append(f\"{institucion} ({email}): {e}\")\n",
+    "        print(f\"Error: {institucion} -> {e}\")\n",
+    "\n",
+    "print(f\"\\nResumen: {enviados}/{len(metricas_por_institucion)} emails enviados\")\n",
+    "if errores:\n",
+    "    print(\"Errores:\")\n",
+    "    for err in errores:\n",
+    "        print(f\"  - {err}\")"
    ]
   }
  ],
